@@ -2,8 +2,8 @@ package com.mangkyu.employment.interview.app.quiz.repository;
 
 import com.mangkyu.employment.interview.JpaTestConfig;
 import com.mangkyu.employment.interview.app.answer.repository.AnswerRepository;
-import com.mangkyu.employment.interview.app.quiz.service.QuizSearchCondition;
 import com.mangkyu.employment.interview.app.quiz.entity.Quiz;
+import com.mangkyu.employment.interview.app.quiz.entity.QuizSearchCondition;
 import com.mangkyu.employment.interview.enums.value.QuizCategory;
 import com.mangkyu.employment.interview.enums.value.QuizLevel;
 import com.mangkyu.employment.interview.testutils.EntityCreationUtils;
@@ -99,8 +99,8 @@ class QuizRepositoryTest {
 
         final QuizSearchCondition searchCondition = QuizSearchCondition.builder()
                 .query(null)
-                .categories(Collections.emptySet())
-                .levels(new HashSet<>(Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR)))
+                .categories(Set.of())
+                .levels(new HashSet<>(List.of(QuizLevel.NEW, QuizLevel.JUNIOR)))
                 .build();
 
         boolean hasNext = true;
@@ -129,8 +129,8 @@ class QuizRepositoryTest {
 
         final QuizSearchCondition searchCondition = QuizSearchCondition.builder()
                 .query(null)
-                .categories(new HashSet<>(Arrays.asList(QuizCategory.ALGORITHM, QuizCategory.DATABASE)))
-                .levels(Collections.emptySet())
+                .categories(new HashSet<>(List.of(QuizCategory.ALGORITHM, QuizCategory.DATABASE)))
+                .levels(Set.of())
                 .build();
 
         boolean hasNext = true;
@@ -159,8 +159,8 @@ class QuizRepositoryTest {
 
         final QuizSearchCondition searchCondition = QuizSearchCondition.builder()
                 .query(null)
-                .categories(Collections.emptySet())
-                .levels(Collections.emptySet())
+                .categories(Set.of())
+                .levels(Set.of())
                 .build();
 
         boolean hasNext = true;
@@ -221,10 +221,10 @@ class QuizRepositoryTest {
     @Test
     public void selectQuizCountByCategory() {
         // given
-        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.DATABASE, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.DATABASE, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR));
 
         quizRepository.save(quiz1);
         quizRepository.save(quiz2);
@@ -256,23 +256,23 @@ class QuizRepositoryTest {
     @Test
     public void selectQuizNotInAndLevelAndQuizCategory() {
         // given
-        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.DATABASE, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.JAVA, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.DATABASE, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.JAVA, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR));
 
         final Quiz savedQuiz1 = quizRepository.save(quiz1);
         final Quiz savedQuiz2 = quizRepository.save(quiz2);
         final Quiz savedQuiz3 = quizRepository.save(quiz3);
         final Quiz savedQuiz4 = quizRepository.save(quiz4);
 
-        final Set<Long> idSet = new HashSet<>(Arrays.asList(savedQuiz1.getId(), savedQuiz2.getId(), savedQuiz3.getId(), savedQuiz4.getId()));
+        final Set<Long> idSet = new HashSet<>(List.of(savedQuiz1.getId(), savedQuiz2.getId(), savedQuiz3.getId(), savedQuiz4.getId()));
 
         // when
-        final List<Quiz> unsolvedQuizList1 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(Collections.emptySet(), new HashSet<>(Arrays.asList(QuizCategory.JAVA, QuizCategory.ALGORITHM, QuizCategory.CULTURE)), QuizLevel.NEW);
-        final List<Quiz> unsolvedQuizList2 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(Collections.emptySet(), new HashSet<>(Arrays.asList(QuizCategory.CULTURE, QuizCategory.NETWORK)), QuizLevel.NEW);
-        final List<Quiz> unsolvedQuizList3 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(Collections.emptySet(), new HashSet<>(Arrays.asList(QuizCategory.JAVA, QuizCategory.ALGORITHM, QuizCategory.DATABASE)), QuizLevel.NEW);
-        final List<Quiz> unsolvedQuizList4 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(idSet, new HashSet<>(Arrays.asList(QuizCategory.JAVA, QuizCategory.DATABASE)), QuizLevel.NEW);
+        final List<Quiz> unsolvedQuizList1 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(Set.of(), new HashSet<>(List.of(QuizCategory.JAVA, QuizCategory.ALGORITHM, QuizCategory.CULTURE)), QuizLevel.NEW);
+        final List<Quiz> unsolvedQuizList2 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(Set.of(), new HashSet<>(List.of(QuizCategory.CULTURE, QuizCategory.NETWORK)), QuizLevel.NEW);
+        final List<Quiz> unsolvedQuizList3 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(Set.of(), new HashSet<>(List.of(QuizCategory.JAVA, QuizCategory.ALGORITHM, QuizCategory.DATABASE)), QuizLevel.NEW);
+        final List<Quiz> unsolvedQuizList4 = quizRepository.customFindByIdNotInAndQuizCategoryInAndQuizLevel(idSet, new HashSet<>(List.of(QuizCategory.JAVA, QuizCategory.DATABASE)), QuizLevel.NEW);
 
         // then
         assertThat(unsolvedQuizList1.size()).isEqualTo(2);
@@ -284,10 +284,10 @@ class QuizRepositoryTest {
     @Test
     public void selectQuizNotInAndLevel() {
         // given
-        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.JAVA, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.JAVA, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR));
 
         final Quiz savedQuiz1 = quizRepository.save(quiz1);
         final Quiz savedQuiz2 = quizRepository.save(quiz2);
@@ -295,8 +295,8 @@ class QuizRepositoryTest {
         final Quiz savedQuiz4 = quizRepository.save(quiz4);
 
         // when
-        final List<Quiz> unsolvedQuizList1 = quizRepository.customFindByIdNotInAndQuizLevelAndIsEnableTrue(new HashSet<>(Arrays.asList(savedQuiz1.getId(), savedQuiz2.getId())), QuizLevel.NEW);
-        final List<Quiz> unsolvedQuizList2 = quizRepository.customFindByIdNotInAndQuizLevelAndIsEnableTrue(Collections.emptySet(), QuizLevel.NEW);
+        final List<Quiz> unsolvedQuizList1 = quizRepository.customFindByIdNotInAndQuizLevelAndIsEnableTrue(new HashSet<>(List.of(savedQuiz1.getId(), savedQuiz2.getId())), QuizLevel.NEW);
+        final List<Quiz> unsolvedQuizList2 = quizRepository.customFindByIdNotInAndQuizLevelAndIsEnableTrue(Set.of(), QuizLevel.NEW);
 
         // then
         assertThat(unsolvedQuizList1.size()).isEqualTo(1);
@@ -306,10 +306,10 @@ class QuizRepositoryTest {
     @Test
     public void selectQuizLevel() {
         // given
-        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.JAVA, Arrays.asList(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
-        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.JAVA, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz1 = EntityCreationUtils.quiz("quiz1", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz2 = EntityCreationUtils.quiz("quiz2", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz3 = EntityCreationUtils.quiz("quiz3", QuizCategory.JAVA, List.of(QuizLevel.NEW, QuizLevel.JUNIOR, QuizLevel.SENIOR));
+        final Quiz quiz4 = EntityCreationUtils.quiz("quiz4", QuizCategory.JAVA, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR));
 
         quizRepository.save(quiz1);
         quizRepository.save(quiz2);
@@ -324,14 +324,14 @@ class QuizRepositoryTest {
     }
 
     private void initForPaging(final QuizCategory quizCategory) {
-        final Quiz savedQuiz1 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
-        final Quiz savedQuiz2 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
-        final Quiz savedQuiz3 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
-        final Quiz savedQuiz4 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
-        final Quiz savedQuiz5 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
-        final Quiz savedQuiz6 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, Arrays.asList(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
-        final Quiz savedQuiz7 = quizRepository.save(EntityCreationUtils.quiz("quiz", QuizCategory.ALGORITHM, Collections.singletonList(QuizLevel.SENIOR)));
-        final Quiz savedQuiz8 = quizRepository.save(EntityCreationUtils.quiz("quiz", QuizCategory.DATABASE, Collections.singletonList(QuizLevel.SENIOR)));
+        final Quiz savedQuiz1 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
+        final Quiz savedQuiz2 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
+        final Quiz savedQuiz3 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
+        final Quiz savedQuiz4 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
+        final Quiz savedQuiz5 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
+        final Quiz savedQuiz6 = quizRepository.save(EntityCreationUtils.quiz("quiz", quizCategory, List.of(QuizLevel.JUNIOR, QuizLevel.SENIOR)));
+        final Quiz savedQuiz7 = quizRepository.save(EntityCreationUtils.quiz("quiz", QuizCategory.ALGORITHM, List.of(QuizLevel.SENIOR)));
+        final Quiz savedQuiz8 = quizRepository.save(EntityCreationUtils.quiz("quiz", QuizCategory.DATABASE, List.of(QuizLevel.SENIOR)));
 
         savedQuiz1.setAnswer(answerRepository.save(EntityCreationUtils.answer(savedQuiz1)));
         savedQuiz2.setAnswer(answerRepository.save(EntityCreationUtils.answer(savedQuiz2)));
